added a write option for nfc tags, needs debugging though <.<

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myNFCApp",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Giovanni Allemeersch",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
